--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
     <name>ScoreboardStats</name>
     <inceptionYear>2013</inceptionYear>
     <description>Show the Scoreboard with many custom variables</description>
-    <version>0.9.16</version>
+    <version>0.10</version>
     <url>http://dev.bukkit.org/bukkit-plugins/scoreboardstats</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <powermock.version>1.6.5</powermock.version>
+        <powermock.version>1.6.6</powermock.version>
         <!--Possibility to deploy directly to the plugins folder-->
         <outputDir>${basedir}/target</outputDir>
     </properties>
@@ -64,6 +64,33 @@
                 <configuration>
                     <outputDirectory>${outputDir}</outputDirectory>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.4.3</version>
+                <configuration>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <shadedArtifactAttached>false</shadedArtifactAttached>
+                    <artifactSet>
+                        <includes>
+                            <!--Database pooling-->
+                            <include>com.zaxxer:HikariCP</include>
+                            <!--Logging framework implements slf4j which is required by hikari-->
+                            <include>org.slf4j:slf4j-jdk14</include>
+                            <include>org.slf4j:slf4j-api</include>
+                        </includes>
+                    </artifactSet>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
 
@@ -160,12 +187,12 @@
             <id>placeholderapi</id>
             <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
-        
+
         <repository>
             <id>massive-repo</id>
             <url>https://repo.dustplanet.de/artifactory/ext-release-local</url>
         </repository>
-        
+
         <repository>
             <id>turt2live-repo</id>
             <url>http://repo.turt2live.com/</url>
@@ -204,6 +231,20 @@
                 </exclusion>
             </exclusions>
             <optional>true</optional>
+        </dependency>
+
+        <!--Database pooling-->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+
+        <!--Logging framework implements slf4j which is required by hikari-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.21</version>
         </dependency>
 
         <dependency>
@@ -342,13 +383,13 @@
             </exclusions>
             <optional>true</optional>
         </dependency>
-        
+
         <dependency>
             <groupId>com.github.TechFortress</groupId>
             <artifactId>GriefPrevention</artifactId>
             <version>5186739d3a</version>
         </dependency>
-        
+
         <dependency>
             <groupId>com.github.games647</groupId>
             <artifactId>McCombatLevel</artifactId>
