--- a/pom.xml
+++ b/pom.xml
@@ -189,8 +189,8 @@
         </repository>
 
         <repository>
-            <id>turt2live-repo</id>
-            <url>http://repo.turt2live.com/</url>
+            <id>dustplanet</id>
+            <url>https://repo.dustplanet.de/artifactory/ext-release-local/</url>
         </repository>
     </repositories>
 
@@ -431,10 +431,9 @@
         <!--Factions:-->
         <dependency>
             <groupId>com.massivecraft</groupId>
-            <artifactId>FactionsUUID</artifactId>
-            <!--the name can't be the same because maven would automatically use the newer version-->
-            <!--Factions-UUID fork of 1.6/1.8-->
-            <version>1.6.9.5-U0.1.6</version>
+            <!-- FactionsUUID -->
+            <artifactId>Factions</artifactId>
+            <version>1.6.9.5-U0.1.20</version>
             <exclusions>
                 <exclusion>
                     <groupId>*</groupId>
@@ -447,7 +446,7 @@
         <dependency>
             <groupId>com.massivecraft</groupId>
             <artifactId>factions</artifactId>
-            <version>2.10</version>
+            <version>2.12.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>*</groupId>
@@ -460,7 +459,7 @@
         <dependency>
             <groupId>com.massivecraft</groupId>
             <artifactId>massivecore</artifactId>
-            <version>2.10</version>
+            <version>2.12.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>*</groupId>
