--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <name>ScoreboardStats</name>
     <inceptionYear>2013</inceptionYear>
     <description>Show the Scoreboard with many custom variables</description>
-    <version>0.10.5</version>
+    <version>0.10.6</version>
     <url>https://dev.bukkit.org/bukkit-plugins/scoreboardstats</url>
 
     <properties>
@@ -105,6 +105,11 @@
         <repository>
             <id>shadowvolt-repo</id>
             <url>http://repo.dmulloy2.net/content/groups/public/</url>
+        </repository>
+
+        <repository>
+            <id>xephi-repo</id>
+            <url>https://ci.xephi.fr/plugin/repository/everything/</url>
         </repository>
 
         <!--Player points-->
@@ -394,7 +399,7 @@
             <groupId>com.massivecraft</groupId>
             <!-- FactionsUUID -->
             <artifactId>Factions</artifactId>
-            <version>1.6.9.5-U0.1.20</version>
+            <version>1.6.9.5-U0.1.21</version>
             <exclusions>
                 <exclusion>
                     <groupId>*</groupId>
