--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 # Use https://travis-ci.org/ for automatic testing
 
-# speed up testing http://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/
+# speed up testing https://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/
 sudo: false
 
 # This is a java project
 language: java
 
-script: mvn compile test -U
+script: mvn compile test
 
 jdk: [oraclejdk8]
