--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
-# project informations for Bukkit in order to register our plugin with all it components
+# project data for Bukkit in order to register our plugin with all it components
 # ${project.name} are variables from Maven (pom.xml) which will be replaced after the build
 name: ${project.name}
 version: ${project.version}
 main: ${project.groupId}.${project.artifactId}.${project.name}
 
-# meta informations for plugin managers
+# meta data for plugin managers
 authors: [games647, 'https://github.com/games647/ScoreboardStats/graphs/contributors']
 description: |
     ${project.description}
@@ -34,7 +34,7 @@ commands:
     description: 'Root command for all commands in ${project.name}'
     aliases: [side, ss, sb, board, sidebar]
 
-# Permission managment
+# Permission management
 permissions:
   ${project.artifactId}.admin:
     children:
