Fix ConcurrentModification for TopList (Fixes #215)

--- a/variables/pom.xml
+++ b/variables/pom.xml
@@ -10,4 +10,20 @@
 
     <artifactId>scoreboardstats-variables</artifactId>
     <packaging>jar</packaging>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+                    <links>
+                        <link>https://hub.spigotmc.org/javadocs/spigot/</link>
+                        <link>https://docs.oracle.com/javase/9/docs/api/</link>
+                    </links>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
